# auto-star

./: .env.example  README.md  nohup.out  pyproject.toml
auto_star/: __main__.py  auto_liker.py
